--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -37,4 +37,12 @@ security:
         # - { path: ^/admin, roles: ROLE_ADMIN }
         # - { path: ^/profile, roles: ROLE_USER }
         - { path: ^/login$, roles: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/program, roles: ROLE_SUBSCRIBER }
+        - { path: ^/season, roles: ROLE_SUBSCRIBER }
+        - { path: ^/episode, roles: ROLE_SUBSCRIBER }
+        - { path: ^/actor, roles: ROLE_SUBSCRIBER }
+        - { path: ^/comment, roles: ROLE_SUBSCRIBER }
 
+    role_hierarchy:
+        ROLE_SUBSCRIBER: ROLE_USER
+        ROLE_ADMIN:  ROLE_SUBSCRIBER
