--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,6 +1,14 @@
-#index:
-#    path: /
-#    controller: App\Controller\DefaultController::index
+hwi_oauth_redirect:
+  resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
+  prefix:   /connect
+
+hwi_oauth_connect:
+  resource: "@HWIOAuthBundle/Resources/config/routing/connect.xml"
+  prefix:   /connect
+
+hwi_oauth_login:
+  resource: "@HWIOAuthBundle/Resources/config/routing/login.xml"
+  prefix:   /login
 app_logout:
   path: /logout
   methods: GET
