--- a/config/routes.yaml
+++ b/config/routes.yaml
@@ -1,3 +1,6 @@
+github_login:
+  path: /login/check-github
+
 hwi_oauth_redirect:
   resource: "@HWIOAuthBundle/Resources/config/routing/redirect.xml"
   prefix:   /connect
