--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -23,11 +23,15 @@ security:
             logout:
                 path: app_logout
             oauth:
-                ressource_owners:
-                    github:      "login/check-github"
+                resource_owners:
+                    github:          "/login/check-github"
                 login_path:        /login
-                    use_forward:       false
-                    failure_path:      /login
+                use_forward:       false
+                failure_path:      /login
+
+                oauth_user_provider:
+                    service: my.oauth_aware.user_provider.service
+
                 # where to redirect after logout
                 # target: app_any_route
 
