--- a/config/services.yaml
+++ b/config/services.yaml
@@ -27,4 +27,8 @@ services:
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
     my.oauth_aware.user_provider.service:
-        class:App\Entity\User
+        class: App\Security\MyEntityUserProvider
+        arguments:
+            - '@doctrine'
+            - 'App\Entity\User'
+            - {github: githubID}
